--- a/.github/workflows/create-issue-on-specific-date-with-specific-template.yml
+++ b/.github/workflows/create-issue-on-specific-date-with-specific-template.yml
@@ -1,7 +1,5 @@
-name: 1/25
-on:
-  schedule:
-    - cron: 0 5 26 JAN *
+name: create-issue-on-specific-date-with-specific-template.yml
+on: workflow_dispatch
 
 jobs:
   create_issue:
@@ -26,7 +24,7 @@ jobs:
             --title "$TITLE" \
             --assignee "$ASSIGNEES" \
             --label "$LABELS" \
-            --body "$BODY")
+            --template "$TEMPLATE")
           if [[ $PINNED == true ]]; then
             gh issue pin "$new_issue_url"
           fi
@@ -34,19 +32,8 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GH_REPO: ${{ github.repository }}
           TITLE: Team sync
-          ASSIGNEES: monalisa,doctocat,hubot
+          ASSIGNEES: hoshikawa
           LABELS: weekly sync,docs-team
-          BODY: |
-            ### Agenda
-
-            - [ ] Start the recording
-            - [ ] Check-ins
-            - [ ] Discussion points
-            - [ ] Post the recording
-
-            ### Discussion Points
-            Add things to discuss below
-
-            - [Work this week](https://github.com/orgs/github/projects/3)
+          TEMPLATE: feature_request
           PINNED: false
           CLOSE_PREVIOUS: false
