--- a/.github/workflows/create-empty-pr.yml
+++ b/.github/workflows/create-empty-pr.yml
@@ -14,9 +14,10 @@ jobs:
         uses: actions/checkout@v4
       - name: Create PR
         run: |
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config user.name "github-actions[bot]"
           git checkout -b test
           git commit --allow-empty -m "Put PR title here"
-          # email, name
           git push
           gh pr create --fill
         env:
