--- a/.github/workflows/create-empty-pr.yml
+++ b/.github/workflows/create-empty-pr.yml
@@ -7,7 +7,7 @@ jobs:
     name: Create PR
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
       pull-requests: write
     steps:
       - name: Checkout
